--- a/OSCeleton-KinectSDK2.csproj
+++ b/OSCeleton-KinectSDK2.csproj
@@ -97,7 +97,7 @@
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>694989113E1FA49CAB8185DD43AD8344FA5188DD</ManifestCertificateThumbprint>
@@ -106,10 +106,11 @@
     <ManifestKeyFile>publish\zillode.be.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>publish\zillode.be.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Kinect">
@@ -182,7 +183,6 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
     <AppDesigner Include="Properties\" />
-    <None Include="publish\zillode.be.pfx" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -216,6 +216,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Images\midas-m-logo.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="publish\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
